--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>GTAO VIP Companion App by Thrillhouse</title>
+<title>GTAO VIP Companion App by Thrillhouse - Updated by Tmp341</title>
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Tangerine:bold,bolditalic|Inconsolata:italic|Droid+Sans">
-<link href='https://fonts.googleapis.com/css?family=Patrick+Hand'
-rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Patrick+Hand">
 </head>
 <body leftmargin="0" topmargin=0" rightmargin="0" bottommargin="0" marginwidth="0" marginheight=0"  id="the_body" bgcolor="#000000" nostyle="overflow-x: hidden; overflow-y: hidden;" onload="setup_timers();">
 <div id="div_vipapp" align="center">
@@ -270,7 +269,7 @@ rel='stylesheet' type='text/css'>
          transform="translate(-28.227132,274.8131)"
          id="g5391-5" />
       <image
-         xlink:href="file:///home/user/sync/projects/gtav/big_map_timers/inspire/Blue-Ubermacht-Sentinel-XS-Rear.jpg"
+         xlink:href="https://raw.githubusercontent.com/Tmp341/VIPApp/gh-pages/Images/SentinelXS.jpg"
          x="1051"
          y="739.36218"
          width="248.88889"
@@ -369,7 +368,7 @@ rel='stylesheet' type='text/css'>
     <g
        style="font-size:37.50135422px;font-style:normal;font-variant:normal;font-weight:600;font-stretch:normal;line-height:76.99999809%;letter-spacing:0px;word-spacing:0px;fill:#404f6b;fill-opacity:1;stroke:none;display:inline;font-family:SignPainter;-inkscape-font-specification:SignPainter Semi-Bold"
        id="text4693"
-       transform="translate(-12.807972,-14.408968)">
+       transform="translate(-555.807972,-14.408968)">
       <path
          d="m 603.89968,186.48593 c 1.93506,-0.49501 3.80263,-0.90003 5.6027,-1.21504 1.80005,-0.36001 3.35261,-0.58502 4.65767,-0.67503 1.71004,-0.135 3.03759,0.09 3.98264,0.67503 0.94502,0.54002 1.59754,1.32755 1.95757,2.36258 0.09,0.27001 0.11248,0.51752 0.0675,0.74253 -0.045,0.18001 -0.29253,0.27001 -0.74252,0.27001 -0.85505,0 -1.91259,0.09 -3.17262,0.27001 -1.26006,0.18001 -2.5876,0.40501 -3.98264,0.67502 -1.39506,0.27001 -2.76761,0.54002 -4.11765,0.81003 -1.30505,0.31501 -2.45259,0.60752 -3.44262,0.87753 -0.81004,0.22501 -1.44006,0.29251 -1.89007,0.20251 -0.40502,-0.045 -0.78753,-0.33751 -1.14754,-0.87753 -0.31502,-0.45002 -0.65253,-0.94503 -1.01254,-1.48505 -0.31501,-0.54002 -0.56252,-1.01254 -0.74253,-1.41755 -0.225,-0.58502 -0.33751,-1.14754 -0.33751,-1.68757 0,-0.58501 0.18001,-1.32754 0.54002,-2.22758 0.54002,-1.39504 1.26004,-3.0826 2.16008,-5.06268 0.94503,-1.98006 1.98007,-4.09513 3.10511,-6.34523 1.17004,-2.25006 2.38508,-4.52264 3.64513,-6.81774 1.26004,-2.34006 2.47508,-4.56764 3.64513,-6.68274 1.21503,-2.11505 2.34007,-4.00511 3.37512,-5.67021 1.03503,-1.71002 1.89006,-3.03757 2.5651,-3.98264 0.63,-0.85499 1.17002,-0.80999 1.62006,0.135 0.40499,0.85507 0.5625,2.04762 0.47251,3.57763 -0.045,1.48509 -0.76504,3.46516 -2.16008,5.94022 -0.90005,1.62008 -1.93508,3.46515 -3.10511,5.5352 -1.12505,2.02509 -2.34009,4.23017 -3.64513,6.61523 -1.30506,2.38511 -2.6326,4.88269 -3.98264,7.49277 -1.35006,2.61011 -2.6551,5.2652 -3.91514,7.96529"
          style="font-size:67.50243378px;text-align:center;line-height:76.99999809%;text-anchor:middle;fill:#404f6b"
@@ -484,7 +483,7 @@ rel='stylesheet' type='text/css'>
     <g
        style="font-size:40px;font-style:normal;font-variant:normal;font-weight:600;font-stretch:normal;line-height:125%;letter-spacing:0px;word-spacing:0px;fill:#ffffff;fill-opacity:0.28235294;stroke:none;display:inline;font-family:SignPainter;-inkscape-font-specification:SignPainter Semi-Bold"
        id="text4732"
-       transform="translate(-16.014947,1.067331)">
+       transform="translate(625.61957,2.0132536)">
       <path
          d="m 72.251434,153.64 c 0.666667,-0.21333 1.373333,-0.23999 2.12,-0.08 0.746665,0.16001 1.386665,0.46667 1.92,0.92 0.399997,0.32 0.866663,0.68 1.4,1.08 0.533329,0.37334 1.093328,0.73334 1.68,1.08 0.613327,0.34667 1.239993,0.64 1.88,0.88 0.666658,0.21333 1.319991,0.32 1.96,0.32 1.093323,0 1.919988,-0.24 2.48,-0.72 0.346654,-0.37333 0.493321,-0.74666 0.44,-1.12 -0.05335,-0.4 -0.226679,-0.72 -0.52,-0.96 -0.533345,-0.45333 -1.280011,-0.94666 -2.24,-1.48 -0.933342,-0.55999 -1.866675,-1.17333 -2.8,-1.84 -0.906673,-0.69333 -1.706672,-1.45332 -2.4,-2.28 -0.666671,-0.82666 -1.000004,-1.75999 -1,-2.8 -4e-6,-1.35999 0.333329,-2.66665 1,-3.92 0.693328,-1.25332 1.533327,-2.38665 2.52,-3.4 1.013325,-1.01331 2.079991,-1.89331 3.2,-2.64 1.146655,-0.77331 2.159988,-1.34664 3.04,-1.72 0.959986,-0.39998 1.893318,-0.63998 2.8,-0.72 0.90665,-0.08 1.693316,0.18669 2.36,0.8 0.506648,0.45336 0.933314,0.98669 1.28,1.6 0.346647,0.61336 0.586646,1.20002 0.72,1.76 0.106646,0.40002 0.133313,0.80002 0.08,1.2 -0.05335,0.37335 -0.146687,0.73335 -0.28,1.08 -0.133353,0.34668 -0.293353,0.66668 -0.48,0.96 -0.16002,0.29335 -0.320019,0.54668 -0.48,0.76 -0.266686,0.34668 -0.533352,0.73335 -0.8,1.16 -0.266685,0.40002 -0.520018,0.80001 -0.76,1.2 -0.240018,0.40001 -0.466684,0.78668 -0.68,1.16 -0.21335,0.37335 -0.386683,0.68001 -0.52,0.92 -0.106683,0.18668 -0.226683,0.30668 -0.36,0.36 -0.133349,0.0534 -0.306683,-0.0266 -0.52,-0.24 -0.373349,-0.37332 -0.640015,-0.87999 -0.8,-1.52 -0.160015,-0.63999 -0.02668,-1.42665 0.4,-2.36 0.213318,-0.47998 0.519984,-1.02665 0.92,-1.64 0.42665,-0.61332 0.82665,-1.21331 1.2,-1.8 0.373316,-0.61331 0.653315,-1.17331 0.84,-1.68 0.186648,-0.50665 0.159982,-0.87998 -0.08,-1.12 -0.240018,-0.23998 -0.680017,-0.27998 -1.32,-0.12 -0.640016,0.16002 -1.373349,0.46669 -2.2,0.92 -0.82668,0.42669 -1.70668,0.98669 -2.64,1.68 -0.906678,0.66669 -1.746677,1.40002 -2.52,2.2 -0.746675,0.80002 -1.386675,1.64002 -1.92,2.52 -0.506674,0.85335 -0.77334,1.69335 -0.8,2.52 -0.02667,0.64001 0.22666,1.26668 0.76,1.88 0.533325,0.58668 1.186658,1.14668 1.96,1.68 0.773323,0.50668 1.573322,1.00001 2.4,1.48 0.853321,0.45334 1.559987,0.88001 2.12,1.28 0.773319,0.53334 1.106652,1.24 1,2.12 -0.08002,0.88 -0.560014,1.82667 -1.44,2.84 -0.613346,0.69333 -1.480012,1.22667 -2.6,1.6 -1.093343,0.4 -2.333342,0.52 -3.72,0.36 -1.360006,-0.16 -2.800004,-0.64 -4.32,-1.44 -1.493335,-0.82667 -2.946667,-2.09333 -4.36,-3.8 -0.213332,-0.26666 -0.293332,-0.46666 -0.24,-0.6 0.02667,-0.15999 0.133335,-0.26666 0.32,-0.32"
          id="path4311"
@@ -646,24 +645,24 @@ rel='stylesheet' type='text/css'>
     <text
        xml:space="preserve"
        style="font-size:48px;font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;line-height:125%;letter-spacing:0px;word-spacing:0px;fill:#4a684c;fill-opacity:1;stroke:none;display:inline;font-family:Patrick Hand;-inkscape-font-specification:Patrick Hand"
-       x="1604.9874"
+       x="1640.9874"
        y="906.58911"
        id="text4242"
        sodipodi:linespacing="125%"><tspan
          sodipodi:role="line"
          id="tspan4244"
-         x="1604.9874"
+         x="1640.9874"
          y="906.58911">M.E.T</tspan></text>
     <text
        xml:space="preserve"
        style="font-size:48px;font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;line-height:125%;letter-spacing:0px;word-spacing:0px;fill:#3a4f50;fill-opacity:1;stroke:none;font-family:Patrick Hand;-inkscape-font-specification:Patrick Hand"
-       x="1604.129"
+       x="1570.129"
        y="976.53082"
        id="text4267"
        sodipodi:linespacing="125%"><tspan
          sodipodi:role="line"
          id="tspan4269"
-         x="1604.129"
+         x="1570.129"
          y="976.53082"
          style="font-size:28px">(Mission Elapsed Time)</tspan></text>
     <text
@@ -776,13 +775,13 @@ rel='stylesheet' type='text/css'>
     <text
        xml:space="preserve"
        style="font-size:48px;font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;line-height:125%;letter-spacing:0px;word-spacing:0px;fill:#415555;fill-opacity:1;stroke:none;display:inline;font-family:Patrick Hand;-inkscape-font-specification:Patrick Hand"
-       x="1478.7095"
+       x="1468.7095"
        y="569.13501"
        id="text4781"
        sodipodi:linespacing="125%"><tspan
          sodipodi:role="line"
          id="ghost_vip_c_main"
-         x="1478.7095"
+         x="1468.7095"
          y="569.13501">VIP Challenges</tspan></text>
     <g
        transform="translate(4.5018414e-6,16.000002)"
@@ -1093,7 +1092,7 @@ rel='stylesheet' type='text/css'>
      transform="translate(0,-16)">
     <g
        id="g4466"
-       transform="translate(-19.644858,-218.90572)">
+       transform="translate(-5.644858,-185.90572)">
       <path
          style="fill:#666666;fill-opacity:1;stroke:none;display:inline"
          id="rect5370-9"
@@ -1119,23 +1118,23 @@ rel='stylesheet' type='text/css'>
        xml:space="preserve"
        style="font-size:48px;font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;line-height:125%;letter-spacing:0px;word-spacing:0px;fill:#000000;fill-opacity:1;stroke:none;font-family:Patrick Hand;-inkscape-font-specification:Patrick Hand"
        x="1393.0042"
-       y="-295.81149"
+       y="-275.81149"
        id="text4719"
        sodipodi:linespacing="125%"
        transform="matrix(0.94994373,0.31242103,-0.31242103,0.94994373,0,0)"><tspan
          sodipodi:role="line"
          id="tspan4721"
-         x="1393.0042"
-         y="-295.81149"
+         x="1417.0042"
+         y="-269.81149"
          style="font-size:22px;text-align:center;text-anchor:middle">Click any</tspan><tspan
          sodipodi:role="line"
-         x="1393.0042"
-         y="-268.31149"
+         x="1418.0042"
+         y="-242.31149"
          id="tspan4723"
          style="font-size:22px;text-align:center;text-anchor:middle">Timer to</tspan><tspan
          sodipodi:role="line"
-         x="1393.0042"
-         y="-240.81149"
+         x="1418.0042"
+         y="-214.81149"
          id="tspan4725"
          style="font-size:22px;text-align:center;text-anchor:middle">RESET</tspan></text>
     <text
@@ -1572,12 +1571,12 @@ rel='stylesheet' type='text/css'>
          style="font-size:48px;font-style:normal;font-variant:normal;font-weight:bold;font-stretch:normal;fill:#323232;fill-opacity:1;font-family:Patrick Hand;-inkscape-font-specification:Patrick Hand Bold">00:04:00</tspan></text>
     <text
        sodipodi:linespacing="125%"
-       x="1650.3301"
+       x="1620.3301"
        y="950.86969"
        id="text5061-8-5"
        xml:space="preserve"
        style="font-size:40px;font-style:normal;font-variant:normal;font-weight:600;font-stretch:normal;line-height:125%;letter-spacing:0px;word-spacing:0px;fill:#323232;fill-opacity:1;stroke:none;display:inline;font-family:SignPainter;-inkscape-font-specification:SignPainter Semi-Bold"><tspan
-         x="1650.3301"
+         x="1620.3301"
          y="950.86969"
          id="timer_met"
          style="font-size:48px;font-style:normal;font-variant:normal;font-weight:bold;font-stretch:normal;fill:#323232;fill-opacity:1;font-family:Patrick Hand;-inkscape-font-specification:Patrick Hand Bold">48:00:00</tspan></text>
@@ -1605,12 +1604,12 @@ rel='stylesheet' type='text/css'>
          style="font-size:48px;font-style:normal;font-variant:normal;font-weight:bold;font-stretch:normal;fill:#323232;fill-opacity:1;font-family:Patrick Hand;-inkscape-font-specification:Patrick Hand Bold">12:00:00</tspan></text>
     <text
        sodipodi:linespacing="125%"
-       x="58.081955"
+       x="698.08191"
        y="211.85715"
        id="text4736"
        xml:space="preserve"
        style="font-size:40px;font-style:normal;font-variant:normal;font-weight:600;font-stretch:normal;line-height:125%;letter-spacing:0px;word-spacing:0px;fill:#4c5869;fill-opacity:1;stroke:none;display:inline;font-family:SignPainter;-inkscape-font-specification:SignPainter Semi-Bold"><tspan
-         x="58.081955"
+         x="698.08191"
          y="211.85715"
          id="timer_gtao"
          style="font-style:normal;font-variant:normal;font-weight:bold;font-stretch:normal;fill:#4c5869;fill-opacity:1;font-family:Droid Sans;-inkscape-font-specification:Droid Sans Bold">FRI 22:30</tspan></text>
@@ -1820,23 +1819,23 @@ rel='stylesheet' type='text/css'>
     <text
        xml:space="preserve"
        style="font-size:28px;font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-family:Droid Sans;-inkscape-font-specification:Droid Sans"
-       x="1020.7642"
-       y="903.07043"
+       x="1025.7642"
+       y="923.07043"
        id="box_details_3"><tspan
          sodipodi:role="line"
          id="box_details_1-2-8"
-         x="1020.7642"
-         y="903.07043"
+         x="1025.7642"
+         y="923.07043"
          style="font-size:28px;font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-family:Droid Sans;-inkscape-font-specification:Droid Sans">-</tspan></text>
     <text
        xml:space="preserve"
        style="font-size:28px;font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-family:Droid Sans;-inkscape-font-specification:Droid Sans"
-       x="1020.7642"
+       x="1010.7642"
        y="923.07043"
        id="box_details_3-6"><tspan
          sodipodi:role="line"
          id="box_details_1-2-8-6"
-         x="1020.7642"
+         x="1010.7642"
          y="923.07043"
          style="font-size:28px;font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-family:Droid Sans;-inkscape-font-specification:Droid Sans">-</tspan></text>
   </g>
@@ -2735,7 +2734,7 @@ function pad(num)
 }
 function timer_reset_fme()
 {
-  timer_fme_target=new Date().getTime()+(12*60000)+1000;
+  timer_fme_target=new Date().getTime()+(9*60000)+1000;
     
 }
 function timer_reset_lsc()
@@ -2864,7 +2863,7 @@ function icon_ncm_click(clickid)
 <div id="div_configuration" style="background-color:#ffffff; ">
 	<button onclick="hide_configuration()">HIDE</button>
 
-<a href="https://thrillhows.github.io/VIPApp/">Latest Version</a><br>
+<a href="https://tmp341.github.io/VIPApp/">Latest Version</a><br>
 <a href="https://www.reddit.com/r/gtaonline/comments/40t6qq/vip_companion_app_by_thrillhows/">Reddit Discussion</a><br>
 
 <h3>Instructions</h3>
@@ -2882,12 +2881,12 @@ the Current San Andreas Time. This will update in real time.</li>
 <li>After the last server downtime at R* the Day Of Week for the SACurrent
 time was off by a day. Added a Day Of Week Offset input to allow dynamic
 change.</li>
-<li>Freemode Events Timer - Free Mode Events happen 12 minutes after the end of the previous event. So when an event ends click "Event End" to start the countdown.</li>
+<li>Freemode Events Timer - Free Mode Events happen 9 minutes after the end of the previous event. So when an event ends click "Event End" to start the countdown.</li>
 <li>VIP - After either disbanding or 4 hours freemode time VIP mode has a 12 hour cooldown. Hit Start Cooldown to time this.</li>
 <li>Custom Timers - See the boxes below to change these times. If a count up (stopwatch) is needed set the value to 0 and ignore the "-" sign.</li>
 
 <li>Visit GITHub for <a
-href="https://github.com/thrillhows/VIPApp">Current
+href="https://github.com/Tmp341/VIPApp">Current
 Version</a> of source code.</li>
 </ul>
 
@@ -2897,8 +2896,8 @@ Day Of Week Offset <input type="number" name="quantity" min="0" max="6" id="dowO
 <br>
 
 
-Custom Timer 1: <input type="text" value="10" id="customTimer1"> minutes <br>
-Custom Timer 2: <input type="text" value="6" id="customTimer2"> minutes <br>
+Custom Timer 1: <input type="text" value="96" id="customTimer1"> minutes <br>
+Custom Timer 2: <input type="text" value="10" id="customTimer2"> minutes <br>
 Custom Timer 3: <input type="text" value="0" id="customTimer3"> minutes<br>
 
 <br><br><br>
@@ -2971,11 +2970,11 @@ MISSION,Coasting,20,06,2400,-710,Non-Contact mission Coasting
 MISSION,Coveted,00,08,2800,2050,Non-Contact mission Coveted
 MISSION,Dirt Road,14,22,-2350,4200,Non-Contact mission Dirt Road
 MISSION,Factory Closure,07,17,850,-890,Non-Contact mission Coveted
-RARECAR,Sentinel XS,22,4.5,-601.412,261.859,Blue variant sells for $17420 Yellow for $15960
-RARECAR,Gang Peyote,12,22,-150,-1650,"Comes in Purple, Green or Yellow $12950"
-RARECAR,Dubsta2,09,21,-1250,-2200,Dubsta2 $23250
-RARECAR,SandkingXL,09,17,1250,2720,$18495 blue variant $17,525 yellow variant
-NORARECAR,SandkingXL,09,17,-300,6050,$18495 blue variant $17,525 yellow variant
+RARECAR,Sentinel XS,22,4.5,-601.412,261.859,Blue variant $17420 Yellow variant $15960
+RARECAR,Gang Peyote,12,22,-150,-1650,Purple, Green or Yellow variant $12950
+RARECAR,Dubsta2,09,21,-1250,-2200,Dubsta2 Chrome and Gold variants $23250
+RARECAR,SandkingXL,09,17,1250,2720,Blue variant $18495 Yellow variant $17525
+NORARECAR,SandkingXL,09,17,-300,6050,Blue variant $18495 Yellow variant $17525
 NORARECAR,BF Surfer,23,04,-2300,4900,Chrome and Yellow $4525
 RARECAR,Mariachi Tornado,19,20,-1000,4900,Mariachi Tornado Easter Egg
 NORARECAR,Burrito,10,12,2300,2950,Worn White Burrito 
