--- a/index.html
+++ b/index.html
@@ -2883,7 +2883,9 @@ time was off by a day. Added a Day Of Week Offset input to allow dynamic
 change.</li>
 <li>Freemode Events Timer - Free Mode Events happen 9 minutes after the end of the previous event. So when an event ends click "Event End" to start the countdown.</li>
 <li>VIP - After either disbanding or 4 hours freemode time VIP mode has a 12 hour cooldown. Hit Start Cooldown to time this.</li>
-<li>Custom Timers - See the boxes below to change these times. If a count up (stopwatch) is needed set the value to 0 and ignore the "-" sign.</li>
+<li>Custom Timers - See the boxes below to change these times. If a count up (stopwatch) is needed set the value to 0 and ignore the "-" sign.
+<br><dt><i>* Currently, there is a slight bug if you set the custom timers <b>> 25</b> minutes.</i></dt>
+<dt><i>** First custom timer shows 96 minutes, which is 2 days for Nightclub safe (useful to know if you keep it at Full House state).</i></dt></li>
 
 <li>Visit GITHub for <a
 href="https://github.com/Tmp341/VIPApp">Current
@@ -2982,7 +2984,6 @@ NORARECAR,Dunebuggy,00,23,2400,4500,Dunebuggy
 VIPWORK,Altruist,-1,-1,,,Hostile takeover at the Altruist Camp.
 VIPWORK,LSIA,-1,-1,,,Hostile takeover at LSIA
 </textarea>
-**currently there is a slight bug if you set the custom timers > 25 minutes.
 </div>
 </body>
 </html>
