--- a/index.html
+++ b/index.html
@@ -2973,7 +2973,7 @@ MISSION,Coveted,00,08,2800,2050,Non-Contact mission Coveted
 MISSION,Dirt Road,14,22,-2350,4200,Non-Contact mission Dirt Road
 MISSION,Factory Closure,07,17,850,-890,Non-Contact mission Coveted
 RARECAR,Sentinel XS,22,4.5,-601.412,261.859,Blue variant $17420 Yellow variant $15960
-RARECAR,Gang Peyote,12,22,-150,-1650,Purple, Green or Yellow variant $12950
+RARECAR,Gang Peyote,12,22,-150,-1650,"Purple, Green or Yellow variant $12950"
 RARECAR,Dubsta2,09,21,-1250,-2200,Dubsta2 Chrome or Gold variant $23250
 RARECAR,SandkingXL,09,17,1250,2720,Blue variant $18495 Yellow variant $17525
 NORARECAR,SandkingXL,09,17,-300,6050,Blue variant $18495 Yellow variant $17525
